AC_INIT(src)dnl
AM_INIT_AUTOMAKE(passwdgen,2.2)dnl
AM_CONFIG_HEADER(config.h)dnl

AC_ARG_ENABLE(text,
[  --disable-text          don't build text front-end],
        text=$enableeval, text=yes)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
CXXLAGS="-O2 -Wall"
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for header files.
AC_CHECK_HEADERS(getopt.h, getopt=yes, getopt=no)

if test "x$getopt" = "xyes"; then
  AC_DEFINE(HAVE_GETOPT_H)
fi

AC_DIVERT_PUSH(AC_DIVERSION_NOTICE)dnl
LIBPASSWDGEN_MAJOR_VERSION=2
LIBPASSWDGEN_MINOR_VERSION=2
LIBPASSWDGEN_MICRO_VERSION=0
LIBPASSWDGEN_INTERFACE_AGE=0
LIBPASSWDGEN_BINARY_AGE=0
LIBPASSWDGEN_VERSION=LIBPASSWDGEN_MAJOR_VERSION.$LIBPASSWDGEN_MINOR_VERSION.$LIBPASSWDGEN_MICRO_VERSION
AC_DIVERT_POP()dnl

# libtool versioning
LT_RELEASE=$LIBPASSWDGEN_MAJOR_VERSION.$LIBPASSWDGEN_MINOR_VERSION
LT_CURRENT=`expr $LIBPASSWDGEN_MICRO_VERSION - $LIBPASSWDGEN_INTERFACE_AGE`
LT_REVISION=$LIBPASSWDGEN_INTERFACE_AGE
LT_AGE=`expr $LIBPASSWDGEN_BINARY_AGE - $LIBPASSWDGEN_INTERFACE_AGE`
AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

dnl Initialize libtool
AM_PROG_LIBTOOL

AM_CONDITIONAL(HAVE_SYSTEM_GETOPT_H, test "x$getopt" = "xyes")
AM_CONDITIONAL(DO_TEXT, test "x$text" = "xyes")

AC_OUTPUT(
Makefile \
class/Makefile \
src/Makefile \
src/man/Makefile
)dnl
